Cherry-pick 270421@main (f738f4311526). https://bugs.webkit.org/show_bug.cgi?id=264442

Compilation failure using gcc (GCC) 13.2.1 20231011 (Red Hat 13.2.1-4)
    https://bugs.webkit.org/show_bug.cgi?id=264442
    rdar://118141764

    Reviewed by Alex Christensen.

    Fix compilation error "error: possibly dangling reference to a temporary [-Werror=dangling-reference]"
    No change in observable behaviour.

    * Source/WebCore/dom/TreeScope.cpp:
    (WebCore::TreeScope::findAnchor):
    * Source/WebCore/dom/TreeScopeOrderedMap.cpp:
    (WebCore::TreeScopeOrderedMap::get const):

    Canonical link: https://commits.webkit.org/270421@main