Source/WebCore/dom/TreeScopeOrderedMap.cpp
@@ -114,7 +114,8 @@ inline Element* TreeScopeOrderedMap::get(const AtomStringImpl& key, const TreeSc
     }
 
     // We know there's at least one node that matches; iterate to find the first one.
-    for (auto& element : descendantsOfType<Element>(scope.rootNode())) {
+    Ref rootNode = scope.rootNode();
+    for (auto& element : descendantsOfType<Element>(rootNode)) {
         if (!element.isInTreeScope())
             continue;
         if (!keyMatches(key, element))
